# autonomous-ai-workforce-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml
config/: __init__.py  settings.py
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/dashboard/: agent-activity.tsx  recent-jobs.tsx  revenue-chart.tsx  stats-card.tsx  system-health.tsx
dashboard/src/components/layout/: header.tsx  sidebar.tsx
dashboard/src/hooks/: use-websocket.ts
database/schema/: 001_initial_schema.sql  002_performance_indexes.sql
src/: __init__.py  cli.py  worker.py
src/agents/: __init__.py  manager.py  models.py  persona_generator.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  auth.py
src/api/routes/: agents.py  jobs.py  proposals.py  system.py
src/bidding/: __init__.py  bid_calculator.py  proposal_generator.py  submitter.py
src/communication/: __init__.py  handler.py  memory.py  models.py  sentiment.py
src/core/: __init__.py  cache.py  circuit_breaker.py  container.py  database.py  events.py  exceptions.py  models.py
src/discovery/: __init__.py  models.py  scanner.py  scorer.py
src/execution/: __init__.py  engine.py
src/execution/executors/: __init__.py  base.py  coding.py  data.py  research.py  writing.py
src/finance/: __init__.py  models.py  reconciliation.py  reports.py  transactions.py  wallet.py
src/llm/: __init__.py  client.py
src/orchestration/: __init__.py  scheduler.py
src/quality/: __init__.py  checkers.py  engine.py  models.py
src/safety/: __init__.py  guardian.py  humanizer.py  models.py  rate_limiter.py
src/tasks/: __init__.py  communication.py  discovery.py  execution.py  finance.py  maintenance.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_cache.py  test_circuit_breaker.py  test_container.py  test_exceptions.py
