[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-workforce-platform"
version = "2.0.0"
description = "Autonomous AI Workforce Platform - 10x Enhanced Edition"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Workforce Team"}
]
keywords = ["ai", "automation", "workforce", "agents", "freelance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Async & Concurrency
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0",
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.4",

    # AI/ML
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.0.5",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.3.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # Browser Automation
    "playwright>=1.41.0",
    "selenium>=4.17.0",
    "undetected-chromedriver>=3.5.0",

    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "selectolax>=0.3.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "croniter>=2.0.0",
    "apscheduler>=3.10.0",

    # Security & Encryption
    "cryptography>=42.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",

    # File Processing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "python-magic>=0.4.0",

    # Communication
    "emails>=0.6",
    "aiosmtplib>=3.0.0",

    # Monitoring
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.26.0",
]

[project.scripts]
workforce = "src.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
